# APE-Server-v2

./: .gitignore  API  Makefile  Makefile.am  configure.ac
etc/: ape.conf
src/: a.out  buffer.c  buffer.h  common.h  config.h  dns.c  dns.h  entry.c  event_epoll.c  event_kqueue.c  events.c  events.h  events_loop.c  events_loop.h  hash.c  hash.h  http_parser.c  server.c  server.h  socket.c  socket.h  string.c  string.h
src/core/: APEapi.h  JSON_parser.c  JSON_parser.h  Makefile  Makefile.am  Makefile.in  ape_array.c  ape_array.h  ape_base64.c  ape_base64.h  ape_buffer.c  ape_buffer.h  ape_cmd.c  ape_cmd.h  ape_common_pattern.h  ape_config.c  ape_config.h  ape_dns.c  ape_dns.h  ape_entry.c  ape_event_epoll.c  ape_event_kqueue.c  ape_events.c  ape_events.h  ape_events_loop.c  ape_extend.c  ape_extend.h  ape_hash.c  ape_hash.h  ape_http_parser.c  ape_http_parser.h  ape_json.c  ape_json.h  ape_log.c  ape_log.h  ape_message.h  ape_modules.h  ape_pipe.c  ape_pipe.h  ape_pool.c  (+37 more)
src/modules/: ape_inotify.c  ape_jsapi.c  ape_jsapi.h  ape_jsapi.old  ape_modules.c
