bin_PROGRAMS = aped
aped_SOURCES = ape_entry.c ape_array.c ape_buffer.c ape_channel.c   \
			   ape_config.c ape_dns.c ape_event_devpoll.c			\
			   ape_event_epoll.c ape_event_kqueue.c					\
			   ape_event_select.c ape_events.c ape_events_loop.c	\
			   ape_hash.c ape_http_parser.c ape_json.c ape_log.c	\
			   ape_pool.c ape_server.c ape_socket.c ape_string.c	\
			   ape_timers.c ape_transports.c ape_users.c			\
			   JSON_parser.c 
aped_LDADD	=  ../../deps/confuse-2.7/.libs/libconfuse.la ../../deps/c-ares/.libs/libcares.la
